@@ -1,20 +1,38 @@
 sudo: false
 language: perl
 perl:
-   - '5.14'
-   - '5.16'
-   - '5.18'
-   - '5.20'
-   - '5.21'
+   - 5.14.0
+   - 5.14.1
+   - 5.14.2
+   - 5.14.3
+   - 5.14.4
+   - 5.16.0
+   - 5.16.1
+   - 5.16.2
+   - 5.16.3
+   - 5.18.0
+   - 5.18.1
+   - 5.18.2
+   - 5.20.0
+   - 5.20.1
+   - 5.20.2
+   - 5.22.0
+   - 5.22.1
+   - dev
+   - 'blead'
 env:
    - BUILD=0
    - BUILD=1
 matrix:
    allow_failures:
       - env: BUILD=0
-        perl: '5.21'
+        perl: dev
+      - env: BUILD=0
+        perl: 'blead'
       - env: BUILD=1
-        perl: '5.21'
+        perl: dev
+      - env: BUILD=1
+        perl: 'blead'
    fast_finish: true
 before_install:
    - 'if [[ $BUILD == 1 && ! -d .build/testing ]]; then unset BUILD; fi'
