@@ -1,0 +1,45 @@
+[@CorePrep]
+
+[-SingleEncoding]
+
+[Name]
+[Version]
+
+[Region  / prelude]
+
+; Allows extra code for Test::Synopsis
+[Region / test_synopsis]
+allow_nonpod = 1
+flatten = 0
+[Generic / SYNOPSIS]
+[Generic / DESCRIPTION]
+[Generic / OVERVIEW]
+
+[Collect / ATTRIBUTES]
+command = attr
+
+[Collect / METHODS]
+command = method
+
+[Collect / FUNCTIONS]
+command = func
+
+[Leftovers]
+
+[SeeAlso]
+[Support]
+all_modules  = 1
+bugs         = none
+websites     = metacpan
+email        = me+dev@peter-r.co.uk
+[Bugs]
+
+[Region  / postlude]
+
+[Generic / ACKNOWLEDGEMENTS]
+[Contributors]
+[Authors]
+[Legal]
+
+[-Transformer]
+transformer = List
